NEC Repeat Implementation #704

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=2.5.0
 author=shirriff, z3t0 <zetoslab@gmail.com>
 maintainer=z3t0 <zetoslab@gmail.com> Armin Joachimsmeyer <armin.joachimsmeyer@gmail.com>
 sentence=Send and receive infrared signals with multiple protocols
-paragraph=Currently included protocols: Aiwa, BoseWave, Denon, Dish, JVC, Lego, LG, MagiQuest, Mitsubishi, Panasonic, RC5, RC6, Samsung, Sanyo, Sharp, Sony, Whynter, (Pronto).<br/><br/><b>New:<b>Major refactoring and extensions.<br/>
+paragraph=Currently included protocols: Aiwa, BoseWave, Denon, Dish, JVC, Lego, LG, MagiQuest, Mitsubishi, Panasonic, RC5, RC6, Samsung, Sanyo, Sharp, Sony, Whynter, (Pronto).<br/><br/><b>New:</b>Major refactoring and extensions.<br/>
 category=Communication
 url=https://github.com/z3t0/Arduino-IRremote
 architectures=*
